# BoardGameEngines

./: .gitignore  Arena.py  Cargo.toml  LICENSE  README.md  main.py  newgame.py  pyproject.toml  requirements.txt
Avalam/: Arena.py  Avalam.py  Game.py  Player.py  __init__.py
Avalam/PythonEngine/: BoardState.py  utils.py
Avalam/RustEngine/: RustEngine.pyi  __init__.py
Avalam/rust_engine/: Cargo.toml  pyproject.toml  result.txt  test.py
Avalam/rust_engine/RustEngine/: BoardState.py  __init__.py
Avalam/rust_engine/src/: board.rs  lib.rs
GameEngines/: BaseBoardState.py  Game.py  RandomPlayer.py  __init__.py  cache_utils.py
GameEngines/Avalam/: Avalam.pyi  AvalamGame.py  BoardState.py  Player.py  SaveModule.py  SaveState.py  __init__.py  __init__.pyi  repr.py  utilsTypes.py
GameEngines/Checkers/: BoardState.py  Checkers.pyi  SaveModule.py  SaveState.py  __init__.py  __init__.pyi  repr.py  utilsTypes.py
GameEngines/Quoridor/: BoardState.py  Quoridor.pyi  SaveModule.py  __init__.py  __init__.pyi  repr.py  utilsTypes.py
GameEngines/UltiTTT/: BoardState.py  Player.py  SaveModule.py  SaveState.py  UltiTTT.pyi  UltiTTTGame.py  __init__.py  __init__.pyi  repr.py  utilsTypes.py
GameEngines/_generic/: AbsBoardState.py  AbsPlayer.py  __init__.py  utils.py
GameEngines/abstract/: AbsPlayer.py  (+2 more)
Players/: Minimax.py  RandomPlayer.py  __init__.py
RustEngine/: Cargo.toml  pyproject.toml  test.py
avalamEngine/: Arena.py  Board.py  BoardState.py  Game.py  MinimaxSearch.py  Node.py  __init__.py  utils.py
src/: Avalam.rs  Checkers.rs  Quoridor.rs  UltiTTT.rs  lib.rs
tests/: test_avalam.py  test_checkers.py  test_game.py  test_quoridor.py  test_rand_player.py  test_ultittt.py  var_test.py
(+70 files in other folders)
