[package]
name = "GameEngines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "GameEngines"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.17"
itertools="0.10.5"
ndarray = "0.15.6"
pyo3 = { version = "0.17.3", features = ["extension-module"] }

[profile.dev]
opt-level = 3