[package]
name = "GameEngines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "GameEngines"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.23.0"
itertools= "0.13.0"
ndarray = "0.16.1"
pyo3 = { version = "0.23.2", features = ["extension-module", "py-clone"] }

[profile.dev]
opt-level = 3